--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "^0.14.0-rc1",
     "react-dom": "^0.14.0-rc1",
     "react-relay": "^0.8.1",
-    "reindex-js": "^0.3.1"
+    "reindex-js": "^0.3.1",
+    "stampit": "^3.0.0-rc.6"
   },
   "devDependencies": {
     "babel": "^5.8.23",
@@ -46,6 +47,7 @@
     "babel-preset-react": "^6.11.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-relay-plugin": "^0.8.1",
+    "babelify": "^7.3.0",
     "css-loader": "^0.19.0",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -56,6 +58,7 @@
     "react-transform-hmr": "^1.0.0",
     "redbox-react": "^1.0.1",
     "style-loader": "^0.12.4",
+    "tape": "^4.6.0",
     "webpack": "^1.12.0",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-dev-server": "^1.14.1",
